edit Save button on add play screen

--- a/add_a_play_screen.kv
+++ b/add_a_play_screen.kv
@@ -38,7 +38,7 @@
                 font_size: 28
 
         Button:
-            text: 'Connect'
+            text: 'Save Play'
             font_size: 24
 
             on_press: root.do_add(nameOfPlay.text,shortDescription.text)
