gather all screen classes fix issues with delete

--- a/add_a_play_screen.kv
+++ b/add_a_play_screen.kv
@@ -1,4 +1,3 @@
-
 <AddAPlay>:
     BoxLayout
         id: add_a_play_layout
@@ -81,3 +80,10 @@
             font_size: 24
 
             on_press: root.do_go_back()
+
+<DeleteAPlay>:
+    Button:
+        text: 'Go Back'
+        font_size: 24
+
+        on_press: root.do_go_back()
