--- a/connected.kv
+++ b/connected.kv
@@ -34,6 +34,7 @@
                 text_size: self.size
                 halign:'center'
                 valign: 'middle'
+                on_press: root.delete_a_play()
 
             Button:
                 text: "Add a Hall"
