--- a/connected.kv
+++ b/connected.kv
@@ -42,6 +42,7 @@
                 text_size: self.size
                 halign:'center'
                 valign: 'middle'
+                on_press: root.add_a_hall()
             Button:
                 text: "Delete a Hall"
                 font_size: 24
